Working on website using bootstrap and cyborg theme (need to design a bit first)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Pooneet Thaper</title>
+    <link rel="stylesheet" href="css/cyborg.css">
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+
+  <body>
+    <div class="container-fluid">
+      <div id="nav-bar">
+        <ul class="nav nav-tabs">
+          <li role="presentation" class="active"><a href="#">Home</a></li>
+          <li role="presentation"><a href="#">About Me</a></li>
+          <li role="presentation"><a href="#">(something?)</a></li>
+        </ul>
+      </div>
+
+      <div class="row text-center" id="banner">
+        <div class="jumbotron">
+          <h1>Pooneet Thaper</h1>
+          <p>Aspiring Data Scientist and Software Engineer</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div id="about-me">
+        </div>
+
+        <div>
+      </div>
+
+    </div>
+  </body>
+</html>
