--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Welcome! I am a Junior in the Macaulay Honors program at the City College of New York studying Computer Science. My interests include, but are nowhere near limited to, Full Stack Web Development and Machine Learning/Deep Learning.
               </p>
               <p>
-                When I have some time, I like to explore new technologies and work on side projects in order to learn new things. Through this, classes, and hackathons, I have had the pleasure of trying out a wide range of technologies. Some things I have experience in are:
+                When I have some time, I like to explore new technologies and work on side projects in order to learn new things. Through this, classes, and hackathons, I have had the pleasure of trying out a wide range of technologies. Some things I have experience with:
               </p>
             </div>
             <div class="col-sm-4">
