Added photo, will work more when have time

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           </div>
         </div>
 
-        <div class="col-lg-6" id="photo">
-
+        <div class="col-md-5 col-xs-12" id="photo">
+          <img src="img/Headshot.jpg" class="img-responsive img-circle center-block">
         </div>
       </div>
     <!--
