just a quick little update

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="row">
             <div class="col-sm-12">
               <p>
-                Welcome! I am a Junior in the Macaulay Honors program at the City College of New York studying Computer Science. My interests include, but are nowhere near limited to, Full Stack Web Development and Machine Learning/Deep Learning.
+                Welcome! I am a graduate of the Macaulay Honors program at the City College of New York where I majored in Computer Science. My interests include data science as well as web development.
               </p>
               <p>
                 When I have some time, I like to explore new technologies and work on side projects in order to learn new things. Through this, classes, and hackathons, I have had the pleasure of trying out a wide range of technologies. Some things I have experience with:
@@ -56,17 +56,17 @@
             <div class="col-sm-4">
               <p>Libraries:</p>
               <ul>
-                <li>Tensorflow</li>
+                <li>Apache Spark</li>
                 <li>SciKitLearn</li>
                 <li>Processing/P5.js</li>
-                <li>MatPlotLib</li>
+                <li>Plotly.js</li>
               </ul>
             </div>
             <div class="col-sm-4">
               <p>Other:</p>
               <ul>
                 <li>Amazon Web Services</li>
-                <li>ElasticSearch</li>
+                <li>Google Cloud</li>
                 <li>MongoDB</li>
                 <li>Docker</li>
               </ul>
